--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewPostActivity"> </activity>
+        <activity android:name=".CommentsActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity android:name=".NewPostActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity android:name=".SetupActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".RegisterActivity">
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
